<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Googol To One</string>

    <string name="play_button">Play</string>
    <string name="highscores_button">High scores</string>
    <string name="rules_button">Rules</string>
    <string name="ok">Ok</string>
    <string name="no_connection_title">No Internet Connection</string>
    <string name="no_connection_message">You need Internet connection to play this game. Please, establish connection and try again.</string>

    <string name="rules">This game is designed for two players. The first player proposes a phrase and a second one should guess the most popular conclusion presented by the Google search engine. When three mistakes are made players exchange roles.</string>
    <string name="error_sound">When you make a mistake you will hear this sound:</string>
    <string name="sound_button">Play the sound</string>

    <string name="names_text">What do they call you?</string>
    <string name="start_button">Start</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>

    <string name="guess_button">Let him quess</string>
    <string name="query_text">Print in your query below</string>
    <string name="query_empty">Start writing your query and you will see the most popular suggestions from Google</string>
    <string name="query_invalid">Your query doesn\'t make sense to Google. Please, try again</string>

    <!-- String for Score Text View -->
    <string name="score_fmt">%3$s - %4$s\n %1$s : %2$s</string>

    <!-- Strings for Answer typing layout -->
    <string name="actual_beginning_request_fmt_ans_type">%s...</string>
    <string name="beginning_request_ans_typ">Beginning request:</string>
    <string name="your_answer_ans_typ">Your answer:</string>
    <string name="default_answer_ans_typ">answer</string>
    <string name="check_ans_typ">Check!</string>

    <string name="check_answer_correct_fmt_ans_typ">Correct! You earn %d</string>
    <string name="check_answer_try_again_ans_typ">Try again!</string>

    <!-- Strings for Round result layout -->
    <string name="title_activity_ro_res">Round Result</string>
    <string name="bingo_ro_res">Round results</string>
    <!-- Set of strings for congratulations -->
    <string name="result1_ro_res">You guessed</string>
    <string name="result2_multiple_ro_res">answers</string>
    <string name="result2_singular_ro_res">answer</string>
    <string name="result2_rus_ro_res">answers</string>
    <string name="result3_ro_res">and earned</string>
    <string name="result4_ro_res">points.</string>

    <string name="next_step_ro_res">Next player: </string>
    <string name="until_end_rounds_ro_res">Rounds remaining: </string>
    <string name="next_round_ro_res">Next Round</string>

    <!-- Strings for End Game layout-->
    <string name="title_activity_end_game">End Game</string>
    <string name="congratulation1_end_game">Congratulations,</string>
    <string name="congratulation2_end_game">You win!</string>
    <string name="draw_end_game">It\'s a draw.</string>
    <string name="score_end_game">Final score:</string>
    <string name="btn_again_end_game">Again</string>
    <string name="btn_enough_end_game">Enough</string>
    <string name="title_best_sc">Best Scores</string>

    <!-- TODO: why spaces remove? -->
    <string name="colon"> : </string>
    <string name="dash"> - </string>

</resources>
