<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dip"

              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
            android:id="@+id/cong_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulation1_end_game"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:padding="15dip"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulation2_end_game"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:padding="10dip"/>

    <TextView
            android:id="@+id/score_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_end_game"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:padding="10dip"/>

    <Button
            android:id="@+id/againBtn"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:text="@string/btn_again_end_game"/>

    <Button
            android:id="@+id/enoughBtn"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:text="@string/btn_enough_end_game"/>

</LinearLayout>