<?xml version="1.0" encoding="utf-8"?>

<!-- CR move all dimensions to resources -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bingo_ro_res"
                android:textSize="20sp"
                android:padding="15dip"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulation1_ro_res"
                android:textSize="20sp"
                android:padding="15dip"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_step_ro_res"
                android:textSize="20sp"
                android:padding="15dip"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/until_end_rounds_ro_res"
                android:textSize="20sp"
                android:padding="15dip"/>

        <Button
                android:id="@+id/next_round"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:text="@string/next_round_ro_res"/>

    </LinearLayout>

</ScrollView>