<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_global_padding">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_view_padding"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_sound"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_view_padding"/>

        <Button
                android:id="@+id/soundButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:text="@string/sound_button"/>

    </LinearLayout>

</ScrollView>