<?xml version="1.0" encoding="utf-8"?>

<!-- CRDONE write attributes in following order: id, layout_width, layout_height, other -->
<!-- CRDONE move all dimensions to resources -->
<LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/activity_global_padding"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
            android:id="@+id/begin_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginning_request_ans_typ"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/text_view_padding"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_answer_ans_typ"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/activity_global_padding"/>

    <!--TODO: maybe choose input type with correction-->
    <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/edit_text_padding_top"
            android:text="@string/default_answer_ans_typ"
            android:inputType="text"/>

    <Button
            android:id="@+id/startButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/check_ans_typ"/>

    <!-- TODO: add image -->

</LinearLayout>