<?xml version="1.0" encoding="utf-8"?>

<!-- CRDONE write attributes in following order: id, layout_width, layout_height, other -->
<!-- CRDONE move all dimensions to resources -->
<!-- CRDONE use match_parent instead of fill_parent-->
<LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="20dip">

    <Button
            android:id="@+id/playButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/play_button"/>

    <Button
            android:id="@+id/highscoresButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/highscores_button"/>

    <Button
            android:id="@+id/rulesButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/rules_button"/>

</LinearLayout>

