<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/query_text"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_view_padding"/>

        <EditText
                android:id="@+id/query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        <TextView
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/query_empty"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_view_padding"/>

    </LinearLayout>

    <Button
            android:id="@+id/continue_button"
            android:text="@string/guess_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:layout_marginBottom="@dimen/button_margin_bottom"/>

</LinearLayout>